--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ chrono = "0.4.42"
 dirs = "6.0.0"
 thiserror = "2.0.17"
 hyprland = "0.4.0-beta.3"
+toml = "0.9.7"
+serde = "1.0.228"
+log = "0.4"
+fern = "0.7"
