setup for cargo release

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "nest"
-version = "0.1.0"
+version = "0.0.3"
 edition = "2024"
+authors = ["Vincent Brodin <vincent.brodin21@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/VincentBrodin/nest"
+readme = "README.md"
+description = "An automatic window switcher for Hyprland"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
