--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 version = "0.0.3"
-name = "nest"
+name = "hypr-nest"
 description = "An automatic window switcher for Hyprland"
 edition = "2024"
 authors = ["Vincent Brodin <vincent.brodin21@gmail.com>"]
