--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ repository = "https://github.com/VincentBrodin/nest"
 readme = "README.md"
 keywords = ["hyprland", "tool", "utility"]
 
+[[bin]]
+name = "nest"
+path = "src/main.rs"
+
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 chrono = "0.4.42"
